# teh_prac_2

./: .gitattributes  AGENTS_LOG.md  PRD.md  README.md  SPEC.md  VALIDATION_REPORT.md  dataset_spec.md  environment.md  experiment_protocol.md  methods_list.md  project_statement.md  pyproject.toml  references.md  report_structure.md  requirements.txt
data/pointcloud/: pointcloud_metadata.json
data/segments/: segment_metadata.json  segments_test.npz  segments_train.npz  segments_val.npz
data/trajectories/: trajectory_config.json  trajectory_labels.csv
experiments/configs/: classification_config.yaml  clustering_config.yaml  dataset_config.yaml  forecasting_config.yaml  pointcloud_config.yaml  resnet_hdbscan_config.yaml
experiments/runs/: cnn_segment_classifier.pt  lstm_baseline.pt  lstm_class_aware.pt  resnet_like_encoder.pt
report_assets/appendices/: appendix_a_dataset_params.md  appendix_b_method_params.md  appendix_c_extra_results.md  appendix_d_code_fragments.md  appendix_e_additional_figures.md
report_assets/tables/: clustering_results_table.csv  dataset_parameters_table.csv  final_comparison_table.csv  method_parameters_table.csv  methods_table.csv  resource_usage_table.csv
report_assets/text_fragments/: classification_results_table.md  clustering_results_table.md  conclusion_points.md  dataset_description.md  experiment_protocol_summary.md  final_applicability_table.md  final_comparison_table.md  forecasting_results_table.md  hardware_description.md  limitations_summary.md  results_summary.md  (+4 more)
report_template/: report_structure.md
src/: __init__.py
(+76 files in other folders)
